# gaia-tectonics

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  design.md
.github/workflows/: release.yml
examples/: basic_usage.rs  simple_gui.rs
src/: boundary.rs  constants.rs  lib.rs  world.rs
src/geometry/: mod.rs  point.rs  voronoi_diagram.rs  voronoi_query.rs
tests/: boundary_connectivity_test.rs  long_term_stability_test.rs  spherical_voronoi_detailed_test.rs
